--- a/SpacesForChildren/SpacesForChildren/Views/Contracts/Create.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Contracts/Create.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>Criar Contrato</h2>
 
-@using (Html.BeginForm("Create", "Contracts", FormMethod.Post)) {
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
