--- a/SpacesForChildren/SpacesForChildren/Views/Reviews/Create.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Reviews/Create.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.InstitutionId, "InstitutionId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.InstitutionId, "Instituição", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("InstitutionId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.InstitutionId, "", new { @class = "text-danger" })
