--- a/SpacesForChildren/SpacesForChildren/Views/Reviews/CreateReview.cshtml
+++ b/SpacesForChildren/SpacesForChildren/Views/Reviews/CreateReview.cshtml
@@ -33,13 +33,13 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ranking, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ranking, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("Ranking", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Ranking, "", new { @class = "text-danger" })
             </div>
         </div>
         
-        <div class="form-group">
-            @Html.LabelFor(model => model.InstitutionId, "InstitutionId", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="form-group" style="display: none">
+            @Html.LabelFor(model => model.InstitutionId, "Instituição", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextBox("InstitutionId", null, htmlAttributes: new
                 {
